# hbfchl

HBF/: HBF.sln
HBF/HBF/: CMakeLists.txt  HBF.vcxproj  HBF.vcxproj.filters  HBFV0.cuh  HBFV1.cuh  HBFV11.cuh  HBFV12.cuh  HBFV13.cuh  HBFV2.cuh  HBFV3.cuh  HBFV4.cuh  HBFV5.cuh  HBFV6.cuh  HBFV7.cuh  HBFV8.cuh  HBFV9.cuh  WK.cuh  WorkList.cuh  ana.cuh  config_default.ini  cudaGraph.cu  cudaGraph.cuh  fUtil.cpp  fUtil.h  gbar.cuh  graph.cpp  graph.h  graphHost.cpp  graphRead.cpp  graphRead.h  graphRead.i  graphWeight.cpp  groupReadKernel.cuh  internal.h  kernel.cu  memManager.cuh  mutex.cuh  nodeAlloc、nodeAlloc.test.txt  nodeTime.sh  nodeTimeDeltaAdjust.sh  (+18 more)
HBF/HBF/graphInfo/: graphInfo.USA-road-d.CAL.gr.txt  graphInfo.USA-road-d.USA.gr.txt  graphInfo.asia.osm.graph.txt  graphInfo.circuit5M_dc.mtx.txt  graphInfo.delaunay_n20.graph.txt  graphInfo.flickr.mtx.txt  graphInfo.ldoor.mtx.txt  graphInfo.msdoor.mtx.txt  graphInfo.rmat.3Mv.20Me.txt  plot.py
HBF/HBF/nodeAlloc/: nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..DW  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW1  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW128  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW16  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW2  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW32  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW4  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW64  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW8  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW1  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW16  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW2  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW32  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW4  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW8  nodeAlloc..GTX2080Ti..asia.osm.graph..VW1  nodeAlloc..GTX2080Ti..asia.osm.graph..VW16  nodeAlloc..GTX2080Ti..asia.osm.graph..VW2  nodeAlloc..GTX2080Ti..asia.osm.graph..VW32  nodeAlloc..GTX2080Ti..asia.osm.graph..VW4  nodeAlloc..GTX2080Ti..asia.osm.graph..VW8  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..DW  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW1  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW128  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW16  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW2  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW32  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW4  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW64  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW8  nodeAlloc..GTX2080Ti..delaunay_n20.graph..DW  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW1  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW128  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW16  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW2  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW32  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW4  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW64  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW8  nodeAlloc..GTX2080Ti..flickr.mtx..DW  (+37 more)
HBF/HBF/nodeAlloc2/: nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..DW  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW1  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW128  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW16  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW2  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW32  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW4  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW64  nodeAlloc..GTX2080Ti..USA-road-d.CAL.gr..VW8  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..DW  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW1  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW128  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW16  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW2  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW32  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW4  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW64  nodeAlloc..GTX2080Ti..USA-road-d.USA.gr..VW8  nodeAlloc..GTX2080Ti..asia.osm.graph..VW1  nodeAlloc..GTX2080Ti..asia.osm.graph..VW16  nodeAlloc..GTX2080Ti..asia.osm.graph..VW2  nodeAlloc..GTX2080Ti..asia.osm.graph..VW32  nodeAlloc..GTX2080Ti..asia.osm.graph..VW4  nodeAlloc..GTX2080Ti..asia.osm.graph..VW8  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..DW  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW1  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW128  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW16  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW2  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW32  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW4  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW64  nodeAlloc..GTX2080Ti..circuit5M_dc.mtx..VW8  nodeAlloc..GTX2080Ti..delaunay_n20.graph..DW  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW1  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW128  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW16  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW2  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW32  nodeAlloc..GTX2080Ti..delaunay_n20.graph..VW4  (+38 more)
HBF/HBF/nodeTime/: nodeTime..cpu..USA-road-d.CAL.gr..BoostDijstra  nodeTime..cpu..USA-road-d.CAL.gr..Dijstra  nodeTime..cpu..USA-road-d.CAL.gr..HBFV0  nodeTime..cpu..USA-road-d.CAL.gr..HBFV1Delta  nodeTime..cpu..USA-road-d.CAL.gr..HBFV1Normal  nodeTime..cpu..USA-road-d.CAL.gr..HBFV1perfect  nodeTime..cpu..USA-road-d.USA.gr..BoostDijstra  nodeTime..cpu..USA-road-d.USA.gr..Dijstra  nodeTime..cpu..USA-road-d.USA.gr..HBFV0  nodeTime..cpu..USA-road-d.USA.gr..HBFV1Delta  nodeTime..cpu..USA-road-d.USA.gr..HBFV1Normal  nodeTime..cpu..USA-road-d.USA.gr..HBFV1perfect  nodeTime..cpu..asia_osm.mtx..BoostDijstra  nodeTime..cpu..asia_osm.mtx..Dijstra  nodeTime..cpu..asia_osm.mtx..HBFV0  (+39 more)
(+10 files in other folders)
